♟️🗑️ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Select ONE Additional
 [ no ] Feature 2 - Add to an Array using .push()
 [ no ] Feature 3 - Image on the Canvas
 [ no ] Feature 4 - Include prompt() to Get Info From User
-[ no ] Feature 5 - KeyPressed Feature
+[ yes ] Feature 5 - KeyPressed Feature
 -->
 
 <!DOCTYPE html>
